Breaking up lines in hero heading. Fixing alignment for d/l section
adding in <br> tags to break  up the Heading lines. Changing the text on the d/l button in its default state.

Fixed dumb css problem with the d/l links at the bottom of the page.

--- a/_sass/_surge.scss
+++ b/_sass/_surge.scss
@@ -919,7 +919,6 @@ ul {
 }
 
 #downloads {
-  margin-top: -1rem;
   padding-bottom: 0px;
 }
 
